add buttons for different sections

--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
         <article>
             <img src="./hero-bcg.jpeg" alt="about picture">
         </article>
-        <article></article>
+        <article class="about">
+            <!-- btn container -->
+            <div class="btn-container">
+                <button class="tab-btn" data-id="history" >history</button>
+                <button class="tab-btn" data-id="vision">vision</button>
+                <button class="tab-btn" data-id="goals">goals</button>
+            </div>
+        </article>
     </div>
    </section>
 
     <!-- javascript -->
-
+<script src="scripts.js"></script>
 </body>
 </html>
