add class to the image section

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
    <section>
     <div class="title">
         <h2>about</h2>
-        <p>lorem10</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere, veritatis?</p>
     </div>
     <div class="about-center section-center">
-        <article>
+        <article class="about-img">
             <img src="./hero-bcg.jpeg" alt="about picture">
         </article>
         <article class="about">
